project scaffold reworked

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link href="/src/styles/main.scss" rel="stylesheet">
 </head>
 <body>
-
-
-
-<script src="/src/scripts/index.js"></script>
+<h1>To jest strona GOEL</h1>
 </body>
 </html>
