variables changed - opacity

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link href="/src/styles/main.scss" rel="stylesheet">
 </head>
 <body>
-<h1>To jest strona GOEL</h1>
+<h1>This is GOEL</h1>
 </body>
 </html>
